Bug 128132 - Tools->Language->For All Text->More... opens default Options page, not Language Settings->Languages
Summary: Tools->Language->For All Text->More... opens default Options page, not Langua...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-10-14 05:46 UTC by Mike Kaganski
Modified: 2019-12-06 22:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2019-10-14 05:46:37 UTC
Since https://git.libreoffice.org/core/+/94d6fa11d086187b82adf9aa596e0f334827e095, Tools->Language->For All Text->More... (e.g., in Writer) opens Options dialog on a wrong - default - page (LibreOffice->User Data), not on Language Settings->Languages where it should.
Comment 1 Commit Notification 2019-10-14 10:51:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/42294bdf528934095d5314fe334324e708e9543c

Resolves: tdf#128132 language page not opened

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.