Resolves: tdf#128132 language page not opened

Change-Id: I1936840b89963ddc74fa8d7509855fb566e62404
Reviewed-on: https://gerrit.libreoffice.org/80761
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>